--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   animations: ^2.0.1
   shimmer: ^2.0.0
   marquee: ^2.2.0
+  auto_size_text: ^3.0.0-nullsafety.0
   cached_network_image: ^3.1.0
   provider: ^5.0.0
   connectivity_plus: ^1.0.6
