--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   shimmer: ^2.0.0
   marquee: ^2.2.0
   auto_size_text: ^3.0.0-nullsafety.0
+  persistent_bottom_nav_bar: ^4.0.2
+  flutter_svg: ^0.22.0
   cached_network_image: ^3.1.0
   provider: ^5.0.0
   connectivity_plus: ^1.0.6
@@ -28,8 +30,8 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
 
   # fonts:
   #   - family: Schyler
