--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   google_fonts: ^2.1.0
   shimmer: ^2.0.0
   marquee: ^2.2.0
+  pull_to_refresh: ^2.0.0
   auto_size_text: ^3.0.0-nullsafety.0
   persistent_bottom_nav_bar: ^4.0.2
   flutter_svg: ^0.22.0
