--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   connectivity_plus: ^1.0.6
   parse_server_sdk_flutter: ^3.1.0
   http: ^0.13.3
+  url_launcher: ^6.0.17
 
 dev_dependencies:
   flutter_test:
